Fix spacing in offer paragraph

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -188,6 +188,7 @@ $star-color: #ffd500;
         font-family: $secondary-font;
         width: fit-content;
         margin: rem(24) rem(20);
+        line-height: 1.5;
       }
 
       .info-price {
